# AppLensOpenEnv

./: .env.example  .gitignore  Dockerfile  README.md  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  web_ui.py
AppLensOpenEnv/agent/: mock_env.py
agent/: __init__.py  hf_extractor.py  mock_env.py  run_agent.py  train.py
analysis/: code_analyzer.py  complexity.py  dependency_analyzer.py  flask-analysis-summary.md  modernization.py  run_all.py  security.py  send_report_gmail.py  workflow.py
analysis/artifacts/: latest-analysis.json  latest-report-path.txt
analysis/reports/: flask-analysis-20260330-095944.md  flask-analysis-20260330-101446.md  flask-analysis-20260330-102149.md  flask-analysis-20260330-102214.md  flask-analysis-20260408-060229.json  flask-analysis-20260408-060325.json
baseline/: run_analysis.py
data/: vulnerabilities.json
engine/: action_router.py  reward_engine.py  state_manager.py
scanner/: confidence.py  dependency_extractor.py  repo_scanner.py
server/: app.py
templates/: index.html
