[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "app-lens-openenv"
version = "0.1.0"
description = "AppLens OpenEnv for application assessment"
requires-python = ">=3.9"
dependencies = [
    "openenv-core",
    "pydantic>=2.0",
    "fastapi",
    "uvicorn",
    "httpx",
]

[project.scripts]
server = "server.app:main"
